--- a/brain.buzzer.blitz/src/main/resources/application.properties
+++ b/brain.buzzer.blitz/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/onetomany?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/brainblitz?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= 
 
