--- a/brain.buzzer.blitz/src/main/resources/application.properties
+++ b/brain.buzzer.blitz/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
