--- a/brain.buzzer.blitz/src/main/resources/application.properties
+++ b/brain.buzzer.blitz/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+server.port=8080
